# skillrunner

./: .gitignore  AUTHORING.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  skills-lock.json
.github/workflows/: ci.yml  release.yml
bmad/: config.yaml
crates/skillrunner-cli/: Cargo.toml
crates/skillrunner-cli/src/: main.rs  scope_tests.rs  ui.rs  ui_tests.rs
crates/skillrunner-cli/src/snapshots/: skillrunner__ui__tests__snapshot_banner.snap  skillrunner__ui__tests__snapshot_governance_panel_all_green.snap  skillrunner__ui__tests__snapshot_governance_panel_blocked_policy.snap  skillrunner__ui__tests__snapshot_governance_panel_pending_policy.snap  skillrunner__ui__tests__snapshot_summary_box_narrow.snap  skillrunner__ui__tests__snapshot_summary_box_single_row.snap  skillrunner__ui__tests__snapshot_summary_box_wide.snap
crates/skillrunner-cli/tests/: hardening.rs
crates/skillrunner-core/: Cargo.toml
crates/skillrunner-core/src/: app.rs  auth.rs  converter.rs  executor.rs  import.rs  install.rs  lib.rs  lockfile.rs  managed.rs  mcp_governance.rs  model.rs  ollama.rs  plugin.rs  plugin_export.rs  plugin_import.rs  policy.rs  ratings.rs  recommend.rs  registry.rs  resolver.rs  restore.rs  scan.rs  state.rs  updater.rs  validator.rs
crates/skillrunner-manifest/: Cargo.toml
crates/skillrunner-manifest/schemas/: skill_md_frontmatter.json
crates/skillrunner-manifest/src/: lib.rs  skill_md.rs
crates/skillrunner-mcp/: Cargo.toml
crates/skillrunner-mcp/src/: aggregator.rs  aggregator_stdio_tests.rs  backends_config.rs  lib.rs  migration.rs  protocol.rs  sampling.rs  server.rs  server_local.rs  setup.rs  stdio_process.rs  stdio_process_tests.rs  tools.rs  tools_local.rs
docs/: architecture-install-scopes-2026-04-16.md  architecture-install-ux-upgrade-2026-04-14.md  bmm-workflow-status.yaml  prd-install-ux-upgrade-2026-04-14.md  product-brief-install-ux-upgrade-2026-04-14.md
examples/: backends.yaml
examples/plugins/dev-toolkit/: plugin.json
examples/skills/analyze-and-rewrite/: SKILL.md  workflow.yaml
examples/skills/analyze-and-rewrite/prompts/: analyze.txt  rewrite.txt
examples/skills/analyze-and-rewrite/schemas/: analysis.schema.json  input.schema.json  rewrite.schema.json
examples/skills/caveman-speak/: SKILL.md  workflow.yaml
examples/skills/caveman-speak/prompts/: compress.txt
examples/skills/caveman-speak/schemas/: input.schema.json  output.schema.json
examples/skills/code-review/: SKILL.md  manifest.json  workflow.yaml
examples/skills/contract-compare/: SKILL.md  manifest.json
examples/skills/contract-compare/prompts/: compare.txt
examples/skills/contract-compare/schemas/: output.schema.json
examples/skills/fancy-skill/: SKILL.md  manifest.json  test_input.json  workflow.yaml
examples/skills/fancy-skill/prompts/: transform.txt
examples/skills/fancy-skill/schemas/: input.schema.json  output.schema.json
examples/skills/frontend-design/: SKILL.md  manifest.json  workflow.yaml
examples/skills/frontend-design/schemas/: output.schema.json
examples/skills/private-summarizer/: SKILL.md  workflow.yaml
examples/skills/private-summarizer/prompts/: summarize.txt
examples/skills/private-summarizer/schemas/: input.schema.json  output.schema.json
examples/skills/security-scan/: SKILL.md  workflow.yaml
examples/skills/skill-md-complex/: SKILL.md  workflow.yaml
examples/skills/skill-md-complex/prompts/: extract.md  finalize.md  key_points.md  summarize.md
examples/skills/skill-md-medium/: SKILL.md
examples/skills/skill-md-medium/prompts/: shorten.md  summarize.md
examples/skills/skill-md-minimal/: SKILL.md
examples/skills/skill-md-minimal/prompts/: system.txt
examples/skills/waldo/: SKILL.md  manifest.json  workflow.yaml
examples/skills/waldo/prompts/: system.txt
scripts/: build-mcpb.sh
target-linux/: .rustc_info.json
target-linux/release/: skillrunner.d
target-linux/release/.fingerprint/adler2-415e472981800b1d/: lib-adler2  lib-adler2.json
target-linux/release/.fingerprint/adler2-cb804ecaad6dde46/: lib-adler2  lib-adler2.json
target-linux/release/.fingerprint/ahash-14826818207b7903/: lib-ahash  lib-ahash.json
target-linux/release/.fingerprint/ahash-1f9a9d7fddb962a2/: build-script-build-script-build  build-script-build-script-build.json
target-linux/release/.fingerprint/ahash-50d3d16b95679da3/: run-build-script-build-script-build  run-build-script-build-script-build.json
target-linux/release/.fingerprint/ahash-6aa702c806568e87/: run-build-script-build-script-build  run-build-script-build-script-build.json
target-linux/release/.fingerprint/ahash-a64fab327169c8db/: build-script-build-script-build  build-script-build-script-build.json
target-linux/release/.fingerprint/ahash-cbb01db642ed0e21/: lib-ahash  lib-ahash.json
target-linux/release/.fingerprint/aho-corasick-97e6f785d1a8dcad/: lib-aho_corasick  lib-aho_corasick.json
target-linux/release/.fingerprint/anstream-6819fc6db570259a/: lib-anstream  (+1 more)
(+1041 files in other folders)
