[workspace]
members = [
  "crates/skillrunner-cli",
  "crates/skillrunner-core",
  "crates/skillrunner-manifest",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["SkillClub"]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
camino = "1"
semver = { version = "1", features = ["serde"] }
jsonschema = "0.18"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
directories = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
tar = "0.4"
flate2 = "1"
tempfile = "3"
urlencoding = "2"
