[workspace]
members = [
  "crates/skillrunner-cli",
  "crates/skillrunner-core",
  "crates/skillrunner-manifest",
  "crates/skillrunner-mcp",
]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
authors = ["VectorHawk"]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
camino = "1"
semver = { version = "1", features = ["serde"] }
jsonschema = "0.18"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
directories = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
tar = "0.4"
flate2 = "1"
tempfile = "3"
urlencoding = "2"
rpassword = "5"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
indicatif = "0.17"
insta = "1"

[profile.release]
lto = true
strip = true
codegen-units = 1
