[package]
name = "skillrunner-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "skillrunner"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
skillrunner-core = { path = "../skillrunner-core" }
skillrunner-manifest = { path = "../skillrunner-manifest" }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rusqlite.workspace = true
rpassword.workspace = true
