[package]
name = "skillrunner-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
serde.workspace = true
serde_json.workspace = true
skillrunner-core = { path = "../skillrunner-core" }
skillrunner-manifest = { path = "../skillrunner-manifest" }
rusqlite.workspace = true
reqwest.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
mockito = "1"
