[package]
name = "skillrunner-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["registry"]
registry = ["skillrunner-core/registry"]

[dependencies]
anyhow.workspace = true
camino.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
skillrunner-core = { path = "../skillrunner-core", default-features = false }
skillrunner-manifest = { path = "../skillrunner-manifest" }
rusqlite.workspace = true
reqwest.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
mockito = "1"
